Fixed collapse-box bug

--- a/src/components/collapse-box/collapse-box.component.styl
+++ b/src/components/collapse-box/collapse-box.component.styl
@@ -10,6 +10,10 @@
     padding-bottom: 4px;
   }
 
+  .cursor-pointer {
+    cursor: pointer;
+  }
+
   .collapse-box-header {
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
@@ -36,13 +40,13 @@
       color: #b8b8b8;
       cursor: not-allowed;
 
+      .cursor-pointer {
+        cursor: not-allowed;
+      }
+
       .nk-collapse-box-line {
         border-bottom-color: #e1e1e1;
       }
-    }
-
-    b {
-      cursor: pointer;
     }
   }
 }
